--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask
-flask-smorest
-python-dotenv
-flask-sqlalchemy
+Flask-JWT-Extended
+Flask-Smorest
+Flask-SQLAlchemy
+passlib
 marshmallow
+python-dotenv
+gunicorn
